--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -76,7 +76,7 @@ jobs:
     #    uses a compiled language
 
     - name: Install libfuse
-      if: matrix.language == 'go'
+      if: matrix.language == 'go' && matrix.os == 'ubuntu-latest'
       run: |-
         sudo apt-get update
         sudo apt-get install fuse libfuse-dev -y
