--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -84,7 +84,7 @@ jobs:
         shell: bash
         run: |
           commitDate=$(git log -1 --format=%cd --date=format:%Y-%m-%dT%H:%M:%S)
-          ldflags="-s -w -X common.GitCommit=${{ github.sha }} -X common.BuildDate=$commitDate"
+          ldflags="-s -w -X main.version=${{ github.ref_name }} -X main.commit=${{ github.sha }} -X main.date=$commitDate"
           go build -trimpath -ldflags ''"$ldflags"'' -o cloudfuse.exe
           go build -trimpath -ldflags ''"$ldflags"'' -o cfusemon.exe ./tools/health-monitor/
           go build -trimpath -ldflags ''"$ldflags"'' -o windows-startup.exe ./tools/windows-startup/
