--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -84,7 +84,8 @@ jobs:
         shell: bash
         run: |
           commitDate=$(git log -1 --format=%cd --date=format:%Y-%m-%dT%H:%M:%S)
-          ldflags="-s -w -X github.com/Seagate/cloudfuse/common.GitCommit=${{ github.sha }} -X github.com/Seagate/cloudfuse/common.BuildDate=$commitDate"
+          buildDate=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
+          ldflags="-s -w -X github.com/Seagate/cloudfuse/common.GitCommit=${{ github.sha }} -X github.com/Seagate/cloudfuse/common.BuildDate=$buildDate"
           go build -trimpath -ldflags ''"$ldflags"'' -o cloudfuse.exe
           go build -trimpath -ldflags ''"$ldflags"'' -o cfusemon.exe ./tools/health-monitor/
           go build -trimpath -ldflags ''"$ldflags"'' -o windows-startup.exe ./tools/windows-startup/
