--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -37,6 +37,9 @@ jobs:
       actions: read
       contents: read
       security-events: write
+    
+    # Skip for dependabot updates
+    if: ${{ github.triggering_actor != 'dependabot[bot]' }}
       
     steps:
     - name: Checkout repository
