Skip ci/cd on windows for dependabot updates

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -120,6 +120,9 @@ jobs:
       cgo: '0'
       containerName: 'test-cnt-win'
 
+    # Skip for dependabot updates
+    if: ${{ github.triggering_actor != 'dependabot[bot]' }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
