--- a/.golangci.yml
+++ b/.golangci.yml
@@ -12,8 +12,18 @@ linters:
     - misspell                  # Finds commonly misspelled English words in comments.
     - predeclared               # Find code that shadows one of Go's predeclared identifiers.
     - staticcheck               # Set of rules from staticcheck.
+    - testifylint               # Checks usage of github.com/stretchr/testify.
     - typecheck                 # Like the front-end of a Go compiler, parses and type-checks Go code
     - unused                    # Checks Go code for unused constants, variables, functions and types
+
+linters-settings:
+  testifylint:
+    # Enable all checkers (https://github.com/Antonboom/testifylint#checkers).
+    enable-all: true
+    # Disable checkers by name
+    disable:
+      - require-error
+      - suite-thelper
 
 issues:
   max-issues-per-linter: 0
