--- a/setup/baseConfig.yaml
+++ b/setup/baseConfig.yaml
@@ -117,8 +117,8 @@ file_cache:
 # Attribute cache related configuration
 attr_cache:
   timeout-sec: <time attributes and directory contents can be cached (in sec). Default - 120 sec>
-  no-cache-on-list: true|false <do not cache attributes or directory contents during listing. Enabling this flag may cause performance problems.>
-  no-symlinks: true|false <to improve performance disable symlink support. symlinks will be treated like regular files. Default - true>
+  no-cache-on-list: true|false <do not cache attributes or directory contents during listing. Enabling may cause performance problems.>
+  enable-symlinks: true|false <enable symlink support. When false, symlinks will be treated like regular files. Enabling may cause performance problems.>
   max-files: <maximum number of files in the attribute cache at a time. Default - 5000000>
   no-cache-dirs: true|false <to prevent double-listing directories and to make timestamps accurate, disable caching directories. Breaks s3storage.>
 
