Enable symlinks on code coverage tests to pass CI

--- a/testdata/config/azure_block_perf.yaml
+++ b/testdata/config/azure_block_perf.yaml
@@ -26,7 +26,8 @@ block_cache:
 
 attr_cache:
   timeout-sec: 7200
-  
+  enable-symlinks: true
+
 azstorage:
   type: { ACCOUNT_TYPE }
   endpoint: { ACCOUNT_ENDPOINT }
