--- a/testdata/config/azure_key_lru_purge.yaml
+++ b/testdata/config/azure_key_lru_purge.yaml
@@ -23,7 +23,8 @@ file_cache:
 
 attr_cache:
   timeout-sec: 3600
-  
+  enable-symlinks: true
+
 azstorage:
   type: { ACCOUNT_TYPE }
   endpoint: { ACCOUNT_ENDPOINT }
