--- a/testdata/config/azure_key_perf.yaml
+++ b/testdata/config/azure_key_perf.yaml
@@ -25,7 +25,8 @@ file_cache:
 
 attr_cache:
   timeout-sec: 7200
-  
+  enable-symlinks: true
+
 azstorage:
   type: { ACCOUNT_TYPE }
   endpoint: { ACCOUNT_ENDPOINT }
