--- a/testdata/config/azure_sas.yaml
+++ b/testdata/config/azure_sas.yaml
@@ -24,7 +24,8 @@ file_cache:
 
 attr_cache:
   timeout-sec: 3600
-  
+  enable-symlinks: true
+
 azstorage:
   type: { ACCOUNT_TYPE }
   endpoint: { ACCOUNT_ENDPOINT }
