--- a/testdata/config/azure_sas_proxy.yaml
+++ b/testdata/config/azure_sas_proxy.yaml
@@ -24,6 +24,7 @@ file_cache:
 
 attr_cache:
   timeout-sec: 3600
+  enable-symlinks: true
 
 azstorage:
   type: block
@@ -36,4 +37,3 @@ azstorage:
   tier: hot
   https-proxy: 127.0.0.1:8080
   sdk-trace: { VERBOSE_LOG }
-  
