--- a/testdata/config/azure_stream.yaml
+++ b/testdata/config/azure_stream.yaml
@@ -22,7 +22,8 @@ stream:
 
 attr_cache:
   timeout-sec: 3600
-  
+  enable-symlinks: true
+
 azstorage:
   type: { ACCOUNT_TYPE }
   endpoint: { ACCOUNT_ENDPOINT }
