--- a/testdata/config/s3_key_lfu.yaml
+++ b/testdata/config/s3_key_lfu.yaml
@@ -24,7 +24,8 @@ file_cache:
 
 attr_cache:
   timeout-sec: 3600
-  
+  enable-symlinks: true
+
 s3storage:
   bucket-name: { S3_BUCKET_NAME }
   endpoint: { S3_ENDPOINT }
