--- a/setup/baseConfig.yaml
+++ b/setup/baseConfig.yaml
@@ -1,24 +1,24 @@
-# MUST READ : 
-#   If you are creating a cloudfuse config file using this kindly take care of below points 
-#   1. All boolean configs (true|false config) (except ignore-open-flags, virtual-directory, sync-to-flush) are set to 'false' by default. 
+# MUST READ :
+#   If you are creating a cloudfuse config file using this kindly take care of below points
+#   1. All boolean configs (true|false config) (except ignore-open-flags, virtual-directory, sync-to-flush) are set to 'false' by default.
 #      No need to mention them in your config file unless you are setting them to true.
 #   2. 'loopbackfs' is purely for testing and shall not be used in production configuration.
 #   3. 'stream' and 'file_cache' can not co-exist and config file shall have only one of them based on your use case.
-#   4. By default log level is set to 'log_warning' level and are redirected to syslog. 
+#   4. By default log level is set to 'log_warning' level and are redirected to syslog.
 #      Either use 'base' logging or syslog filters to redirect logs to separate file.
-#      To install syslog filter follow below steps:        
+#      To install syslog filter follow below steps:
 #         sudo cp setup/11-cloudfuse.conf /etc/rsyslog.d/
 #         sudo cp setup/cloudfuse-logrotate /etc/logrotate.d/
 #         sudo service rsyslog restart
-#   5. For non-HNS (flat namespace) accounts blobfuse expects special directory marker files to 
-#      exists in container to identify a directory. 
+#   5. For non-HNS (flat namespace) accounts blobfuse expects special directory marker files to
+#      exists in container to identify a directory.
 #      If these files do not exist in container, then 'virtual-directory: true' in 'azstorage' section is required
 #   6. By default 'writeback-cache' is enabled for libfuse3 and this may result in append/write operations to fail.
 #      Either you can disable 'writeback-cache', which might hurt the performance
 #      or you can configure cloudfuse to ignore open flags given by user and make it work with ''writeback-cache'.
 #      'libfuse' section below has both the configurations.
-#   7. If are you using 'allow-other: true' config then make sure user_allow_other is enabled in /etc/fuse.conf file as 
-#      well otherwise mount will fail. By default /etc/fuse.conf will have this option disabled we just need to 
+#   7. If are you using 'allow-other: true' config then make sure user_allow_other is enabled in /etc/fuse.conf file as
+#      well otherwise mount will fail. By default /etc/fuse.conf will have this option disabled we just need to
 #      enable it and save the file.
 #   8. If data in your storage account (non-HNS) is created using Blobfuse or AzCopy then there are marker files present
 #      in your container to mark a directory. In such cases you can optimize your listing by setting 'virtual-directory'
@@ -72,10 +72,10 @@ libfuse:
   max-fuse-threads: <number of threads allowed at libfuse layer for highly parallel operations, Default is 128>
   direct-io: true|false <enable to bypass the kernel cache>
   network-share: true|false <runs as a network share. may improve performance when latency to cloud is high. only supported on Windows.
- 
+
   # Streaming configuration
 stream:
-  # If block-size-mb, max-buffers or buffer-size-mb are 0, the stream component will not cache blocks. 
+  # If block-size-mb, max-buffers or buffer-size-mb are 0, the stream component will not cache blocks.
   block-size-mb: <for read only mode size of each block to be cached in memory while streaming (in MB). For read/write size of newly created blocks. Default - 0 MB>
   max-buffers: <total number of buffers to store blocks in. Default - 0>
   buffer-size-mb: <size for each buffer. Default - 0 MB>
@@ -89,16 +89,16 @@ block_cache:
   disk-size-mb: <maximum disk cache size allowed. Default - 4192 MB>
   disk-timeout-sec: <default disk cache eviction timeout (in sec). Default - 120 sec>
   prefetch: <number of blocks to be prefetched in serial read case. Min - 11>
-  parallelism: <number of parallel threads downloading the data and writing to disk cache. Default - 128> 
-  prefetch-on-open: true|false <prefetch blocks on open. This shall be used only when user application is going to read file from offset 0> 
+  parallelism: <number of parallel threads downloading the data and writing to disk cache. Default - 128>
+  prefetch-on-open: true|false <prefetch blocks on open. This shall be used only when user application is going to read file from offset 0>
 
 # Disk cache related configuration
 file_cache:
   # Required
   path: <path to local disk cache>
 
-  # Optional 
-  policy: lru|lfu <eviction policy to be engaged for cache eviction. lru = least recently used file to be deleted, lfu = least frequently used file to be deleted. Default - lru> 
+  # Optional
+  policy: lru|lfu <eviction policy to be engaged for cache eviction. lru = least recently used file to be deleted, lfu = least frequently used file to be deleted. Default - lru>
   timeout-sec: <default cache eviction timeout (in sec). Default - 120 sec>
   max-eviction: <number of files that can be evicted at once. Default - 5000>
   max-size-mb: <maximum cache size allowed. Default - 0 (unlimited)>
@@ -113,15 +113,15 @@ file_cache:
   refresh-sec: <number of seconds after which compare lmt of file in local cache and container and refresh file if container has the latest copy>
   ignore-sync: true|false <sync call will be ignored and locally cached file will not be deleted>
   hard-limit: true|false <if set to true, file-cache will not allow read/writes to file which exceed the configured limits>
-  
+
 # Attribute cache related configuration
 attr_cache:
   timeout-sec: <time attributes and directory contents can be cached (in sec). Default - 120 sec>
-  no-cache-on-list: true|false <do not cache attributes or directory contents during listing. Enabling this flag may cause performance problems.>
-  no-symlinks: true|false <to improve performance disable symlink support. symlinks will be treated like regular files.>
+  no-cache-on-list: true|false <do not cache attributes or directory contents during listing. Enabling may cause performance problems.>
+  enable-symlinks: true|false <enable symlink support. When false, symlinks will be treated like regular files. Enabling may cause performance problems.>
   max-files: <maximum number of files in the attribute cache at a time. Default - 5000000>
   no-cache-dirs: true|false <to prevent double-listing directories and to make timestamps accurate, disable caching directories. Breaks s3storage.>
-  
+
 # Loopback configuration
 loopbackfs:
   path: <path to local directory>
