--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -200,7 +200,7 @@ jobs:
         run: |
           curl -L https://ziglang.org/download/${{ env.zig }}/zig-linux-x86_64-${{ env.zig }}.tar.xz -o zig.tar.xz
           tar -xf zig.tar.xz -C /opt
-          export PATH=/opt/zig-linux-x86_64-${{ env.zig }}:$PATH
+          echo "/opt/zig-linux-x86_64-${{ env.zig }}" >> $GITHUB_PATH
           zig version
 
       - name: Install Go
