--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -199,6 +199,7 @@ jobs:
       - name: Install Zig
         run: |
           curl -L https://ziglang.org/download/${{ env.zig }}/zig-linux-x86_64-${{ env.zig }}.tar.xz -o zig.tar.xz
+          mkdir -r $HOME/.local/bin
           tar -xf zig.tar.xz -C $HOME/.local/bin
           echo "$HOME/.local/bin/zig-linux-x86_64-${{ env.zig }}" >> $GITHUB_PATH
           echo $PATH
