Fix release with goreleaser

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -242,6 +242,6 @@ jobs:
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
         with:
-          args: release --snapshot
-        #env:
-        #  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          args: release --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
