--- a/sampleStreamingConfigS3.yaml
+++ b/sampleStreamingConfigS3.yaml
@@ -14,6 +14,7 @@ libfuse:
   attribute-expiration-sec: 120
   entry-expiration-sec: 120
   negative-entry-expiration-sec: 240
+  network-share: true
 
 stream:
   block-size-mb: 8
