--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-*       @Dabnsky @Ferelith-maker @foodprocessor @jfantinhardesty
+*       @Dabnsky @Ferelith-maker @foodprocessor @jfantinhardesty @ahuynh1289
