--- a/setup/baseConfig.yaml
+++ b/setup/baseConfig.yaml
@@ -176,9 +176,7 @@ azstorage:
 
 # S3 storage configuration
 s3storage:
-  # Required
-  bucket-name: <name of the bucket to be mounted>
-  # Optional
+  bucket-name: <name of the bucket to be mounted. Default - first accessible bucket>
   key-id: <S3 access key ID. Default - use credentials from environment variables or shared profile (see README)>
   secret-key: <S3 secret access key. Default - use credentials from environment variables or shared profile (see README)>
   region: <S3 region. Default - us-east-1>
